# llm_struc_data_test

./: .py.lint  .pylintrc  README.md  pyproject.toml  setup.py
llm_demo/: __init__.py  demo.py  litellm_client.py  openai_client.py
src/project_name/: __init__.py  utils.py
tests/: conftest.py  test_demo.py  test_example.py  test_llm_client.py  test_utils.py
